force-app/main/default/objects/Infection_Metric__c/Infection_Metric__c.object-meta.xml
<CustomObject>
    <label>Infection Metric</label>
    <nameField>
        <displayFormat>IM{0000}</displayFormat>
        <label>Infection Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infection Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>