force-app/main/default/objects/Infection_Metric__c/fields/Deaths__c.field-meta.xml
<CustomField>
    <fullName>Deaths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deaths</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>