force-app/main/default/objects/Infection_Metric__c/fields/Infections__c.field-meta.xml
<CustomField>
    <fullName>Infections__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Infections</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>